--- a/src/layouts/Document.astro
+++ b/src/layouts/Document.astro
@@ -48,6 +48,15 @@ const url = `${origin}${Astro.url.pathname}`
     <script>
       import '@/js/app'
     </script>
+    {/* Google tag (gtag.js) */}
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LRVDPYGRBV"></script>
+    <script is:inline>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-LRVDPYGRBV');
+    </script>
 	</head>
 	<body>
 		<slot />
