feat: migrate environment #1

--- a/src/pages/webfonts-performance/inline-script/index.astro
+++ b/src/pages/webfonts-performance/inline-script/index.astro
@@ -1,6 +1,6 @@
 ---
 import AppLayout from '@/layouts/App.astro';
-import style from './index.module.scss'
+import style from './index.module.scss';
 
 const meta = {
   title: 'webfonts performance',
