feat: create something like a fan :p

--- a/src/layouts/App.astro
+++ b/src/layouts/App.astro
@@ -1,5 +1,5 @@
 ---
-import DocumentLayout, { Props as DocumentProps } from '../layouts/Document.astro';
+import DocumentLayout, { type Props as DocumentProps } from '../layouts/Document.astro';
 export interface Props extends DocumentProps {}
 
 const props = Astro.props;
