--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,7 @@ const meta = {
 const pages = [
   { href: '/webfonts-performance/inline-script/', text: 'webfonts-performance (inline-script)' },
   { href: '/webfonts-performance/optimize/', text: 'webfonts-performance (optimize)' },
+  { href: '/webgl-school-2024/', text: 'WebGL School 2024' },
 ]
 ---
 
