chore: update meta

--- a/src/pages/webgl-school-2024/002/index.astro
+++ b/src/pages/webgl-school-2024/002/index.astro
@@ -4,7 +4,7 @@ import { Icon } from 'astro-icon/components';
 import style from './style.module.scss';
 
 const meta = {
-  title: 'Report 002',
+  title: 'Report 002 - WebGL School Reports',
 }
 ---
 
