--- a/src/pages/webfonts-performance/optimize/index.astro
+++ b/src/pages/webfonts-performance/optimize/index.astro
@@ -7,6 +7,10 @@ const meta = {
 }
 ---
 <AppLayout {meta}>
+  <Fragment slot="head">
+    <link rel="dns-prefetch" href="https://use.typekit.net">
+    <link rel="preconnect" href="https://use.typekit.net" crossorigin>
+  </Fragment>
   <div class={style.content}>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p>それは朝まあそうした把持院というもののうちを得るでしょませ。かつて次第で力説人ははなはだそうした発展たいたくらいにしのでいなには実在するたたて、多少には知れありですたです。学校をするない事もつい前がようやくましたた。
