--- a/src/pages/webfonts-performance/optimize/index.astro
+++ b/src/pages/webfonts-performance/optimize/index.astro
@@ -1,12 +1,12 @@
 ---
-import AppLayout from '@/layouts/App.astro';
+import WebUILayout from '@/layouts/themes/WebUI/WebUI.astro';
 import style from './index.module.scss'
 
 const meta = {
   title: 'webfonts performance',
 }
 ---
-<AppLayout {meta}>
+<WebUILayout {meta}>
   <Fragment slot="head">
     <link rel="dns-prefetch" href="https://use.typekit.net">
     <link rel="preconnect" href="https://use.typekit.net" crossorigin>
@@ -34,4 +34,4 @@ const meta = {
 
       それでわが会の態度たりその道でがたがによって、しの人が探しし一本の本位を地位に申し上げるべきとなりだ。三日もこの責任を文章に幸福にありがたい客になっと、私を大森飛びたて、前の会っばも多年の幸の弟がけっして国家を知れにおいて計画に、とうていこんな感に聴いのにするあっつもりだろ。それで四本の一方の一字を骨へ説明思えて、封建のご誤解が行っ訳が知らんた。</p>
   </div>
-</AppLayout>
+</WebUILayout>
